# cyder-api

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  base.Dockerfile  build.rs  config.sample.yaml  config.yaml  docker-entrypoint  justfile
server/: .gitignore  Cargo.toml
server/benches/: transform_benchmark.rs
server/migrations/postgres/2025-03-20-062357_initial_setup/: down.sql  up.sql
server/migrations/postgres/2025-07-02-140210_api_key_jwt/: down.sql
server/migrations/postgres/2025-07-10-221420_provider_type_enum/: down.sql  up.sql
server/migrations/postgres/2025-09-23-220412_enum/: down.sql  up.sql
server/migrations/postgres/2026-01-28-233111_request_log_optimize/: down.sql  up.sql
server/migrations/postgres/2026-02-03-230221_request_log_field_opt/: down.sql  up.sql
server/migrations/postgres/2026-04-08-083622_expand_provider_type/: up.sql
server/migrations/postgres/2026-04-10-120000_cost_schema_foundation/: down.sql  up.sql
server/migrations/postgres/2026-04-14-090000_cost_catalog_version_freeze_flags/: down.sql  up.sql
server/migrations/postgres/2026-04-17-100000_model_route_foundation/: down.sql  up.sql
server/migrations/postgres/2026-04-17-120000_api_key_governance_foundation/: down.sql  up.sql
server/migrations/postgres/2026-04-17-130000_request_log_route_trace/: up.sql
server/migrations/postgres/2026-04-20-120000_request_patch_rule_foundation/: down.sql  up.sql
server/migrations/postgres/2026-04-21-090000_routing_resilience_foundation/: down.sql  up.sql
server/migrations/postgres/2026-04-22-120000_request_diagnostics_replay_foundation/: down.sql  up.sql
server/migrations/postgres/2026-04-23-120000_drop_legacy_tables/: down.sql
server/migrations/postgres/2026-04-24-100000_reasoning_profile_foundation/: down.sql  up.sql
server/migrations/postgres/2026-04-26-120000_reasoning_config_foundation/: down.sql  up.sql
server/migrations/postgres/2026-04-27-090000_reasoning_profile_schema_cleanup/: down.sql  up.sql
server/migrations/postgres/2026-04-27-100000_request_log_stream_flag/: down.sql  up.sql
server/migrations/postgres/2026-04-27-110000_manager_auth_instance/: down.sql  up.sql
server/migrations/postgres/2026-05-02-090000_metrics_rollup_foundation/: up.sql
server/migrations/postgres/2026-05-02-100000_alert_lifecycle_foundation/: down.sql  up.sql
server/migrations/postgres/2026-05-02-110000_notification_channel_foundation/: down.sql  up.sql
server/migrations/postgres/2026-05-02-120000_notification_delivery_queue/: up.sql
server/migrations/postgres/2026-05-02-130000_notification_contract_hardening/: down.sql  up.sql
server/migrations/postgres/2026-05-04-090000_notification_channel_state/: up.sql
server/migrations/postgres/2026-05-29-090000_runtime_feature_config_foundation/: down.sql  up.sql
server/migrations/postgres_clean/2026-04-23-180000_clean_baseline/: down.sql  up.sql
server/migrations/sqlite/2025-03-20-062357_initial_setup/: up.sql
server/migrations/sqlite/2025-07-02-140210_api_key_jwt/: up.sql
server/migrations/sqlite/2026-01-28-233111_request_log_optimize/: down.sql  up.sql
server/migrations/sqlite/2026-02-03-230221_request_log_field_opt/: down.sql  up.sql
server/migrations/sqlite/2026-04-08-090000_expand_llm_api_type_for_request_log/: down.sql  up.sql
server/migrations/sqlite/2026-04-10-120000_cost_schema_foundation/: down.sql  up.sql
server/migrations/sqlite/2026-04-14-090000_cost_catalog_version_freeze_flags/: down.sql  up.sql
server/migrations/sqlite/2026-04-17-100000_model_route_foundation/: up.sql
server/migrations/sqlite/2026-04-17-120000_api_key_governance_foundation/: up.sql
server/src/: config.rs  lib.rs  logging.rs  main.rs
server/src/config/: env.rs  loader.rs  override_policy.rs  paths.rs  persistence.rs  source.rs
server/src/controller/: access_control.rs  alert.rs  api_key.rs  auth.rs  cost.rs  custom_field.rs  error.rs  llm_types.rs  metrics.rs  mod.rs  model.rs  model_alias.rs  model_route.rs  notification.rs  portable_config.rs  price.rs  provider.rs  provider_runtime.rs  proxy.rs  reasoning_config.rs  reasoning_profile.rs  request_log.rs  request_patch.rs  runtime_feature_config.rs  stat.rs  system.rs  system_api_key.rs  system_config.rs
server/src/cost/: engine.rs  ledger.rs  meter.rs  mod.rs  normalize.rs  snapshot.rs  templates.rs  templates.yaml
server/src/database/: access_control.rs  alert.rs  api_key.rs  api_key_acl_rule.rs  api_key_rollup.rs  cost.rs  custom_field.rs  manager_auth_instance.rs  metrics.rs  mod.rs  model.rs  model_alias.rs  model_route.rs  notification.rs  price.rs  provider.rs  provider_runtime.rs  reasoning_config.rs  reasoning_profile.rs  request_attempt.rs  request_log.rs  request_patch.rs  request_replay_run.rs  runtime_feature_config.rs  stat.rs  system_api_key.rs
server/src/proxy/: anthropic.rs  auth.rs  cancellation.rs  core.rs  error.rs  gemini.rs  generation.rs  handlers.rs  integration.rs  log_regression.rs  logging.rs  mod.rs  models.rs  ollama.rs  openai.rs  orchestrator.rs  pipeline.rs  prepare.rs  provider_governance.rs  reasoning_suffix.rs  request.rs  requested_model.rs  responses.rs  retry_policy.rs  router.rs  unified.rs  util.rs  utility.rs
server/src/schema/: enum_def.rs  mod.rs  postgres.rs  sqlite.rs
server/src/service/: app_state.rs  infra.rs  mod.rs  redis.rs  request_log_artifact.rs  request_patch.rs  request_replay.rs  vertex.rs
server/src/utils/: acl.rs  auth.rs  billing.rs  limit.rs  mod.rs  sse.rs  storage.rs  transform.rs  usage.rs
(+800 files in other folders)
