[package]
name = "cyder-api"
version = "0.1.2"
edition = "2021"

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.1"
bytes = "1.10.1"
chrono = "0.4.40"
cyder-tools = { version = "0.1.1", features = ["auth"] }
diesel = { version = "2.2.8", features = ["mysql", "postgres", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"] }
diesel_migrations = "2.2.0"
flate2 = "1.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
mysqlclient-sys = { version = "0.4.3", features = ["bundled"] }
once_cell = "1.20.3"
paste = "1.0.15"
pq-sys = { version = "0.7.1", features = ["bundled"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "stream"], default-features = false}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.16.0", features = ["v4"] }
