[package]
name = "cyder-api"
version = "0.4.2"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
bincode = "2.0.1"
bytes = { version = "1.11.0", features = ["serde"] }
chrono = "0.4.43"
chrono-tz = "0.10.4"
cyder-tools = { version = "0.1.2", features = ["auth"] }
dashmap = "6.1.0"
diesel = { version = "2.3.6", features = ["64-column-tables", "postgres", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite", "serde_json"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres", "sqlite"] }
diesel_migrations = "2.3.1"
flate2 = "1.1.8"
futures = "0.3.31"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
once_cell = "1.21.3"
openssl = { version = "0.10.75", features = ["vendored"] }
paste = "1.0.15"
pq-sys = { version = "0.7.5", features = ["bundled"] }
r2d2 = "0.8.10"
rand = "0.9.2"
redis = "1.0.3"
bb8 = "0.9.1"
bb8-redis = "0.26.0"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "stream"], default-features = false}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_with = "3.16.1"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "set-header"] }
uuid = { version = "1.20.0", features = ["v4"] }
aws-sdk-s3 = "1.121.0"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
json-patch = "4.1.0"
rmp-serde = "1.3.1"

[dev-dependencies]
tempfile = "3.24.0"
